results/SVCOMP/specgen/log-StringBuilderChars04-2024_03_01_06_16_20.txt
public class StringBuilderChars04 {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\forall int i; 0 <= i && i < arg.length(); arg.charAt(i) != buffer.charAt(i));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);

        char[] charArray = new char[buffer.length()];
        buffer.getChars(0, buffer.length(), charArray, 0);

        int i = 0;
        //@ maintaining 0 <= i && i <= charArray.length;
        //@ maintaining (\forall int j; 0 <= j && j < i; charArray[j] == buffer.charAt(j));
        //@ decreases charArray.length - i;
        for (char character : charArray) {
            System.out.print(character);
            if (character == buffer.charAt(i))
                return false;
            ++i;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars04.java:4: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < arg.length(); arg.charAt(i) != buffer.charAt(i));
                                                                                          ^
  symbol:   variable buffer
  location: class StringBuilderChars04
1 error

public class StringBuilderChars04 {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\forall int i; 0 <= i && i < arg.length(); arg.charAt(i) != charArray[i]);
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);

        char[] charArray = new char[buffer.length()];
        buffer.getChars(0, buffer.length(), charArray, 0);

        int i = 0;
        //@ maintaining 0 <= i && i <= charArray.length;
        //@ maintaining (\forall int j; 0 <= j && j < i; charArray[j] == buffer.charAt(j));
        //@ decreases charArray.length - i;
        for (char character : charArray) {
            System.out.print(character);
            if (character == charArray[i])
                return false;
            ++i;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderChars04.java:4: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < arg.length(); arg.charAt(i) != charArray[i]);
                                                                                          ^
  symbol:   variable charArray
  location: class StringBuilderChars04
1 error

public class StringBuilderChars04 {
    //@ requires arg != null;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); (int)Character.MIN_VALUE <= (int)arg.charAt(i) && (int)arg.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result <==> (\forall int i; 0 <= i && i < arg.length(); arg.charAt(i) != arg.charAt(i));
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);

        char[] charArray = new char[buffer.length()];
        buffer.getChars(0, buffer.length(), charArray, 0);

        int i = 0;
        //@ maintaining 0 <= i && i <= charArray.length;
        //@ maintaining (\forall int j; 0 <= j && j < i; charArray[j] == buffer.charAt(j));
        //@ decreases charArray.length - i;
        for (char character : charArray) {
            System.out.print(character);
            if (character == arg.charAt(i))
                return false;
            ++i;
        }
        return true;
    }
}
